Fix top-fade so it covers the image drop shadow.

--- a/frontend/scss/main.scss
+++ b/frontend/scss/main.scss
@@ -222,7 +222,7 @@ p.copyright {
   position: relative;
   padding-top: 60px;
   padding-bottom: 0;
-  margin-top: -30px;
+  margin-top: -25px;
 
   &:before {
     content: '';
